# ps-info

./: .gitignore  CHANGELOG.md  README.md  ps-info.cabal  ps-info.entitlements
libproc-helper/: Main.hs
src/: PsInfo.hs
src/PsInfo/: Darwin.hs  Linux.hs
src/PsInfo/Darwin/: Libproc.hs  Mach.hs  Rusage.hs  Sysctl.hs
src/PsInfo/Linux/: Proc.hs
src/PsInfo/Util/: Effect.hs  Types.hs
test/: Main.hs
test/PsInfo/: PsInfoTests.hs
test/PsInfo/Darwin/: DarwinTests.hs
test/PsInfo/Darwin/Libproc/: LibprocTests.hs
test/PsInfo/Darwin/Mach/: MachTests.hs
test/PsInfo/Darwin/Rusage/: RusageTests.hs
test/PsInfo/Darwin/Sysctl/: SysctlTests.hs
test/PsInfo/Linux/: LinuxTests.hs
test/PsInfo/Linux/Proc/: ProcTests.hs
test/PsInfo/Util/: Test.hs
